# ChampionsBet

./: README.md  docker-compose.yml
backend/: Dockerfile  pyproject.toml  requirements.txt
backend/config/: db.env
backend/src/auth/: serializers.py  views.py
backend/src/game_room/: apps.py  invitations.py  models.py  serializers.py  views.py
backend/src/game_room/migrations/: 0001_initial.py
backend/src/main/: api.py  settings.py  urls.py
backend/src/main/management/commands/: wait_for_db.py
backend/src/match/: helpers.py  models.py  serializers.py  views.py
backend/src/match/migrations/: 0001_initial.py
backend/src/team/: models.py  serializers.py  views.py
backend/src/team/migrations/: 0001_initial.py
backend/src/user/: models.py  serializers.py  views.py
backend/src/user/migrations/: 0001_initial.py
frontend/: .prettierrc  package-lock.json  package.json
frontend/src/: App.tsx  index.tsx
frontend/src/components/: ChampionsBet.tsx  HomeMenu.tsx  HomePage.tsx  LoginForm.tsx  LoginPage.tsx  Profile.tsx  PublicRoomsTable.tsx  QuitButton.tsx  UserProfile.tsx  YourRoomsTable.tsx
frontend/src/styles/: App.css  ChampionsBet.css  HomeMenu.css  HomePage.css  LoginForm.css  LoginPage.css  Profile.css  PublicRoomsTable.css  QuitButton.css  UserProfile.css  YourRoomsTable.css
